# startup-validate-agent

./: .aliases  .dockerignore  .env.sample  README.md  flow_visualization.html  logs.txt  pyproject.toml  res.md
src/startup_validate/: crew.py  main.py  plot.py
src/startup_validate/config/: agents.yaml  tasks.yaml
src/startup_validate/tools/: custom_tool.py
